footer text and links fixed, justify about content, logo navbarbrand fix, align youtube embed-aided from mentor commit

--- a/css/style.css
+++ b/css/style.css
@@ -5,23 +5,21 @@
 /* html {
   scroll-behavior: smooth;
 } */
-
-
 * {
   box-sizing: border-box;
 }
 body {
   font-family: "Poppins", sans-serif;
-  /* background: #ffffff; */
-  /* color: #333333; */
   line-height: 1.6;
 }
 
+/* mentor help */
 ul {
   list-style: none;
+  padding-inline-start: 0px;
 }
 a {
-  color: #333333;
+  color: #ffffff;
   text-decoration: none;
 }
 
@@ -40,36 +38,36 @@ h2 {
 
 /* Image styling by default */
 
-img {
-  width: 100%;
+.brandlogo {
+    width: 32px;
+    margin-left: 10px;
 }
+
+/* img {
+  width: 100%;
+} */
 
 .fontwhite {
   color: #ffffff;
 }
 
-/*navbar rules override bootstrap css placed after bootstrap classes!  hmmm...*/
+/*navbar rules override bootstrap css placed after bootstrap classes!*/
 
 .navbar {
   padding: 10px;
   font-weight: 400;
   /* align-content: right; */
   text-align: right;
+    align-items: baseline;
+
 }
-
-/* .navbar-brand img {
-    width: 15%;
-    height: 15%; */
-
 /* header - hero section */
 
 .hero {
-  background: url("../images/studiodesk_overlay.jpg");
+  background: url("../images/studiodesk.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-  /*justify-content: center;*/
-  /* align-content: center; */
   margin: auto;
   height: 500px;
   background-attachment: fixed;
@@ -84,13 +82,14 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
-  /* background: rgba(34, 34, 40, 0.65) */
+  /* change RGBA to HEX Alpha Mentor Suggestion */
+  background: #24252BCF;
 }
 
 .hero-text {
   text-align: center;
   position: absolute;
-  top: 30%;
+  top: 40%;
   left: 10%;
   right: 10%; 
 
@@ -103,6 +102,10 @@ img {
     text-align: center;
     font-size: 30px;
 
+}
+/* Mentor suggestion - Justify Text css */
+.justify {
+    text-align: justify;
 }
 
 .L-h2 {
@@ -123,12 +126,10 @@ img {
 
 
 .overlay {
-  background: url("../images/band_overlay.jpg");
+  background: url("../images/band.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-  /*justify-content: center;*/
-  /* align-content: center; */
   margin: auto;
   background-attachment: fixed;
   color: #ffffff;
@@ -142,7 +143,8 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
-  /* background: rgba(34, 34, 40, 0.9); */
+  /* change RGBA to HEX Alpha 'Mentor Suggestion' */
+  background: #24252BCF;
 }
 
 .container-fluid {
@@ -154,9 +156,9 @@ img {
   background: #fafafa;
 }
 
-.separatorblock-dark {
+/* .separatorblock-dark {
   background: #222228;
-}
+} */
 
 .boxmargin {
   margin: 20px 10px;
@@ -166,11 +168,10 @@ img {
   padding: 5%;
 }
 
-/* .imagebox {
-  border-radius: 2%;
-  height: 80%;
-  width: 80%;
-} */
+.youtube {
+  margin: 0, 25;
+  padding: 25px;
+}
 
 .headermar {
   padding: 25px;
@@ -186,18 +187,11 @@ img {
 .btn-spacer {
   margin-top: 25px;
   margin-bottom: 25px;
-  /* padding: 10%; */
 }
-
- /* .list-inline-item {
-  color: #fafafa; 
-}  */
 
 .hover :hover {
   color: #ffffff;
 }
-
-
 
 .inline-block {
   display: inline;
@@ -205,12 +199,18 @@ img {
 
 /*testimonials*/ 
 
+
 .testimonials {
   text-align: center;
   color: #ffffff;
 }
 
+
 /* testimonial images comes up as error empty string in validator... this is incorrect im using it for testimonial section. */
+
+.testdivheight {
+    max-height: 500px;
+}
 
 .testimonial-images {
   width: 50px;
@@ -228,11 +228,7 @@ img {
 }
 
 
-
-
 .textalign-center {
-  /* align-content: center; */
-  /* margin: auto; */
   text-align: center;
   padding: 5%;
   display: inline-block;
@@ -255,7 +251,6 @@ img {
 /* footer css */
 
 .footer {
-  /* color: #ffffff; */
   padding: 5% 20%;
 }
 
@@ -267,15 +262,9 @@ img {
 .footer p {
   font-weight: 400;
   font-size: 14px;
-  /* color: #ffffff; */
 }
 
-/* Footer links from stack overflow code */
-
-.footerlink {
-  /* color: #fff; */
-}
-
+/* Copyright */
 
 .copyright {
   text-align: center;
@@ -308,6 +297,7 @@ img {
     .h2-header-text {
     text-align: center;
     font-size: 26px;
+    
 
 }
 }
